2006-07-07  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-personality.cc: Update test to cope with Linux
	systems building with a personality other than PER_LINUX.

2006-07-06  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Bump version to 0.99.3.

	* NEWS: Bump version to 0.99.3.

	* configure.ac: Bump version to 0.99.3.

2006-07-06  Roger Leigh  <rleigh@debian.org>

	* Version 0.99.2

	* debian/changelog: Finalise for 0.99.2.

2006-07-06  Roger Leigh  <rleigh@debian.org>

	* README: Update build dependencies.

2006-07-06  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document new features.

2006-07-06  Roger Leigh  <rleigh@debian.org>

	* test/*.cc: Replace SRCDIR with TESTDATADIR.

	* test/Makefile.am
	(AM_CXXFLAGS): Replace SRCDIR with TESTDATADIR.
	(TESTS): Run setup-test-data and cleanup-test-data at the start
	and end of testing, respectively.
	(EXTRA_DIST): Distribute setup-test-data and cleanup-test-data.
	(clean-local): Run cleanup-test-data.

	* test/cleanup-test-data: New file.  Remove testdata directory.

	* test/setup-test-data: New file.  Copy test data to testdata
	directory and change the ownership to root.

2006-07-03  Roger Leigh  <rleigh@debian.org>

	* README: Document new Boost build dependency.

	* TODO: Remove completed item.

	* sbuild/sbuild-session.cc
	(setup_chroot): Use sbuild::run_parts in place of run-parts(8).

	* configure.ac: Remove run-parts(8) checks.

2006-07-03  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-run-parts.cc: Add run-parts tests.

	* test/run-parts.ex?: Add run-parts test scripts.

	* configure.ac: Add check for libboost_regex.

	* sbuild/Makefile.am: Add sbuild-run-parts sources.

	* sbuild/sbuild-run-parts.(cc|h): New files.  This class
	reproduces the functionality of run-parts(8).

	* sbuild/sbuild-util.cc (exec): Add (moved from sbuild-session).

	* sbuild/sbuild-session.cc (exec): Remove.

2006-07-03  Roger Leigh  <rleigh@debian.org>
